# app/module/sys/model/role/view.go
@@ -3,5 +3,7 @@ package role
 // DevopsSysRoleView 角色表
 type DevopsSysRoleView struct {
 	DevopsSysRole
+	Menus      []int  `json:"menus"`
+	Apis       []int  `json:"apis"`
 	DomainName string `json:"domainName"`
 }
